// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer: articleDetail handles LOAD 1`] = `
Immutable.Map {
  "article": Immutable.Map {
    "replyCount": 1,
    "id": "AV9mEFX2yCdS-nWhuiPu",
    "replyRequestCount": 1,
    "createdAt": "2017-10-29T02:57:47.509Z",
    "user": null,
    "text": "請問這偏文章是正確嗎？",
  },
  "replyConnections": Immutable.List [
    Immutable.Map {
      "articleId": "article1",
      "replyId": "reply1",
      "canUpdateStatus": true,
      "status": "NORMAL",
      "reply": Immutable.Map {
        "id": "reply1",
        "type": "NOT_ARTICLE",
        "text": "文字長度太短，疑似為使用者手動輸入之查詢語句，不像轉傳文章。",
      },
      "feedbacks": Immutable.List [],
      "user": Immutable.Map {
        "id": "AVqVwjqQyrDaTqlmmp_a",
        "name": null,
        "avatarUrl": null,
      },
      "createdAt": "2017-10-29T03:19:56.782Z",
    },
  ],
  "relatedArticles": Immutable.List [
    Immutable.Map {
      "id": "article1",
    },
    Immutable.Map {
      "id": "article2",
      "text": "~~黎建南給退休軍公教人員的一封公開信~~",
    },
  ],
  "relatedReplies": Immutable.List [
    Immutable.Map {
      "article": Immutable.Map {
        "id": "article1",
      },
      "reply": Immutable.Map {
        "id": "relatedReply1",
        "type": "RUMOR",
        "text": "醫師聽聞後都斥為無稽之談",
      },
    },
    Immutable.Map {
      "article": Immutable.Map {
        "id": "article1",
      },
      "reply": Immutable.Map {
        "id": "relatedReply2",
        "type": "RUMOR",
        "text": "喝冰水跟罹癌根本是兩回事",
      },
    },
  ],
  "searchArticles": Immutable.List [],
  "searchReplies": Immutable.List [],
}
`;

exports[`reducer: articleDetail handles LOAD_AUTH 1`] = `
Immutable.List [
  Immutable.Map {
    "articleId": "article1",
    "replyId": "reply1",
    "canUpdateStatus": true,
    "status": "NORMAL",
    "reply": Immutable.Map {
      "id": "reply1",
      "type": "NOT_ARTICLE",
      "text": "文字長度太短，疑似為使用者手動輸入之查詢語句，不像轉傳文章。",
    },
    "feedbacks": Immutable.List [],
    "user": Immutable.Map {
      "id": "AVqVwjqQyrDaTqlmmp_a",
      "name": null,
      "avatarUrl": null,
    },
    "createdAt": "2017-10-29T03:19:56.782Z",
  },
]
`;

exports[`reducer: articleDetail handles LOAD_SEARCH_OF_ARTICLES 1`] = `
Immutable.List [
  Immutable.Map {
    "id": "AV0_zZZeyCdS-nWhucSq",
    "text": "限時免費貼圖大放送！

只要在期限７/１１~７/２６前將本訊息轉傳至１０個聊天室，就可獲得貼圖一款（貓貓蟲-咖波 懶惰生活）呦！

（轉傳完成以後請重新開啟你的Line，點擊以下連結下載貼圖）

「貓貓蟲-咖波 懶惰生活」
https://line.me/S/sticker/8358",
    "replyCount": 2,
    "createdAt": "2017-07-14T06:33:44.284Z",
    "replyConnections": Immutable.List [
      Immutable.Map {
        "reply": Immutable.Map {
          "id": "AV1S6y1XyCdS-nWhucgX",
          "text": "或許是另一種廣告的方式",
          "createdAt": "2017-07-17T23:38:50.582Z",
          "type": "NOT_ARTICLE",
        },
      },
      Immutable.Map {
        "reply": Immutable.Map {
          "id": "AV1AZJvIyCdS-nWhucTA",
          "text": "在不知情使用者會把訊息傳到幾個聊天室的狀況下，當然LINE也就不可能藉由這樣的方式贈送貼圖。不管轉發10個聊天室還是100個聊天室，都不會有免費貼圖可以拿。也不會因為按了連結而發生個資被盜用的狀況。",
          "createdAt": "2017-07-14T09:18:41.607Z",
          "type": "RUMOR",
        },
      },
    ],
  },
  Immutable.Map {
    "id": "5481225302468-rumor",
    "text": "TOTAL道達爾潤滑油所推出的企業贊助貼圖，隱含惡意程式，下載或使用此貼圖會被群翻。",
    "replyCount": 2,
    "createdAt": "2017-01-10T08:47:00.000Z",
    "replyConnections": Immutable.List [
      Immutable.Map {
        "reply": Immutable.Map {
          "id": "5428664755205-answer",
          "text": "貼圖不會隱藏惡意程式。

LINE 官方貼文將此則留言作為謠言的例子，呼籲大家切勿相信。Total 官方粉絲頁亦有澄清。",
          "createdAt": "2016-12-30T16:35:00.000Z",
          "type": "RUMOR",
        },
      },
      Immutable.Map {
        "reply": Immutable.Map {
          "id": "AV8WL1dfyCdS-nWhuhYV",
          "text": "道達爾潤滑油與LINE，共同發表官方聲明：
『一切為不實謠言，請網友勿信』，LINE相關訊息以官方公告為準。
通訊軟體上，惡意散播下載道達爾QUARTZ機器人貼圖隱含\\"惡意程式\\"，下載或使用此貼圖會被群翻之謠言，是不實消息。",
          "createdAt": "2017-10-13T14:42:02.206Z",
          "type": "RUMOR",
        },
      },
    ],
  },
]
`;

exports[`reducer: articleDetail handles LOAD_SEARCH_OF_REPLIES 1`] = `
Immutable.List [
  Immutable.Map {
    "article": Immutable.Map {
      "id": "AWFwXCyvhutQxxU6trWK",
      "text": "上面 這隻熊點他可以下載是隱藏版新圖
如不能下載點以下連結
line://ch/1454987169/coupon/sticker/grant
台北捷運伴你同行
是真的！
(  隱藏版的免付費貼圖 )",
    },
    "reply": Immutable.Map {
      "id": "AWFwXeiThutQxxU6trWM",
      "text": "打開「台北捷運GO」 APP，選取首頁上方熊讚專屬橫幅(banner)，連結至「貼圖下載」頁面，即可免費使用可愛的熊讚心情貼圖。貼圖下載活動期間為即日起至3月7日，貼圖則可使用到107年8月6日。
",
      "type": "NOT_RUMOR",
      "createdAt": "2018-02-07T13:04:18.065Z",
    },
  },
  Immutable.Map {
    "article": Immutable.Map {
      "id": "AWFu2p62hutQxxU6trSv",
      "text": "請下載台北捷運公司貼圖

line://ch/1454987169/coupon/sticker/grant",
    },
    "reply": Immutable.Map {
      "id": "AWFu3vnWhutQxxU6trSz",
      "text": "台北捷運公司確實有發行此款貼圖。貼圖下載活動期間為即日起至3月7日，貼圖則可使用到107年8月6日。

該連結直接導向至貼圖下載頁面，應不需加入任何可疑廣告群組。",
      "type": "NOT_RUMOR",
      "createdAt": "2018-02-07T06:06:02.197Z",
    },
  },
]
`;

exports[`reducer: articleDetail handles SET_STATE 1`] = `
Immutable.Map {
  "isLoading": true,
  "isAuthLoading": false,
  "isReplyLoading": false,
}
`;

exports[`reducer: articleDetail handles partial LOAD 1`] = `
Immutable.Map {
  "article": Immutable.Map {
    "replyCount": 1,
    "id": "AV9mEFX2yCdS-nWhuiPu",
    "replyRequestCount": 1,
    "createdAt": "2017-10-29T02:57:47.509Z",
    "user": null,
    "text": "請問這偏文章是正確嗎？",
  },
  "replyConnections": Immutable.List [
    Immutable.Map {
      "id": "reply1",
      "canUpdateStatus": true,
      "status": "NORMAL",
      "reply": Immutable.Map {
        "id": "AV9mN3dDyCdS-nWhuiP3",
        "user": Immutable.Map {
          "id": "AVqVwjqQyrDaTqlmmp_a",
          "name": null,
          "avatarUrl": null,
        },
        "type": "NOT_ARTICLE",
        "text": "文字長度太短，疑似為使用者手動輸入之查詢語句，不像轉傳文章。",
        "reference": "",
        "createdAt": "2017-10-29T03:40:31.938Z",
      },
      "feedbacks": Immutable.List [],
      "user": Immutable.Map {
        "id": "AVqVwjqQyrDaTqlmmp_a",
        "name": null,
        "avatarUrl": null,
      },
      "createdAt": "2017-10-29T03:40:31.942Z",
    },
    Immutable.Map {
      "id": "reply2",
      "canUpdateStatus": true,
      "status": "NORMAL",
      "reply": Immutable.Map {
        "id": "AV9mJJ5qyCdS-nWhuiPz",
        "user": Immutable.Map {
          "id": "AVqVwjqQyrDaTqlmmp_a",
          "name": null,
          "avatarUrl": null,
        },
        "type": "NOT_ARTICLE",
        "text": "文字長度太短，疑似為使用者手動輸入之查詢語句，不像轉傳文章。",
        "reference": "",
        "createdAt": "2017-10-29T03:19:56.776Z",
      },
      "feedbacks": Immutable.List [],
      "user": Immutable.Map {
        "id": "AVqVwjqQyrDaTqlmmp_a",
        "name": null,
        "avatarUrl": null,
      },
      "createdAt": "2017-10-29T03:19:56.782Z",
    },
  ],
  "relatedArticles": Immutable.List [
    Immutable.Map {
      "id": "article1",
    },
    Immutable.Map {
      "id": "article2",
      "text": "~~黎建南給退休軍公教人員的一封公開信~~",
    },
  ],
  "relatedReplies": Immutable.List [
    Immutable.Map {
      "article": Immutable.Map {
        "id": "article1",
      },
      "reply": Immutable.Map {
        "id": "relatedReply1",
        "type": "RUMOR",
        "text": "醫師聽聞後都斥為無稽之談",
      },
    },
    Immutable.Map {
      "article": Immutable.Map {
        "id": "article1",
      },
      "reply": Immutable.Map {
        "id": "relatedReply2",
        "type": "RUMOR",
        "text": "喝冰水跟罹癌根本是兩回事",
      },
    },
  ],
  "searchArticles": Immutable.List [],
  "searchReplies": Immutable.List [],
}
`;
